--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "filament/filament": "^4.3",
         "gboquizosanchez/filament-log-viewer": "*",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.41",
         "laravel/pulse": "*",
         "laravel/tinker": "^2.10.1",
-        "livewire/flux": "^2.9.0"
+        "livewire/flux": "^2.9.0",
+        "predis/predis": "^3.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
