--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "dotswan/filament-laravel-pulse": "^2.1",
         "filament/filament": "^4.3",
         "gboquizosanchez/filament-log-viewer": "*",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.41",
-        "laravel/pulse": "*",
+        "laravel/pulse": "^1.4",
+        "laravel/telescope": "^5.16",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.9.0",
-        "predis/predis": "^3.3"
+        "predis/predis": "^3.3",
+        "stechstudio/filament-impersonate": "^4.0",
+        "stephenjude/filament-debugger": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
